WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145689
FunctionExecutable::isCompiling() is weird and wrong.
https://bugs.webkit.org/show_bug.cgi?id=145689
Summary
FunctionExecutable::isCompiling() is weird and wrong.
Andreas Kling
Reported
2015-06-05 00:42:14 PDT
FunctionExecutable::isCompiling() will effectively always return false. It was probably correct back in the day when there was only the interpreter and the baseline JIT.
Attachments
Patch
(6.43 KB, patch)
2015-06-05 00:50 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-06-05 00:50:50 PDT
Created
attachment 254345
[details]
Patch
Geoffrey Garen
Comment 2
2015-06-05 10:15:27 PDT
Comment on
attachment 254345
[details]
Patch r=me
Andreas Kling
Comment 3
2015-06-09 14:20:37 PDT
Comment on
attachment 254345
[details]
Patch Clearing flags on attachment: 254345 Committed
r185379
: <
http://trac.webkit.org/changeset/185379
>
Andreas Kling
Comment 4
2015-06-09 14:20:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug